--- a/ayatana-indicator-notifications/PKGBUILD
+++ b/ayatana-indicator-notifications/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Furkan Kardame <furkan@fkardame.com>
 
-pkgname="ayatana-indicator-notifications-git"
+pkgname="ayatana-indicator-notifications"
 _pkgname="ayatana-indicator-notifications"
-pkgver="0.8.2"
+pkgver="23.10.1"
 pkgrel="1"
 pkgdesc="Ayatana Indicator for viewing recent notifications"
 arch=("i686" "x86_64" "aarch64")
@@ -10,20 +10,14 @@ url="https://github.com/AyatanaIndicators"
 license=("GPL3")
 depends=("glib2" "libayatana-indicator")
 makedepends=("intltool" "libayatana-indicator" "glib2" "gdk-pixbuf2" "gtk3" "mate-common")
-source=("https://github.com/AyatanaIndicators/${_pkgname}/archive/${pkgver}.tar.gz")
-md5sums=("0e520af7b7b0cce368d9d684172a9e19")
+source=("https://github.com/AyatanaIndicators/ayatana-indicator-notifications/archive/refs/tags/23.10.1.tar.gz")
+md5sums=("SKIP")
 options=("!emptydirs")
-
-prepare()
-{
-    cd ${_pkgname}-${pkgver}
-    NOCONFIGURE=1 ./autogen.sh
-}
 
 build()
 {
     cd ${_pkgname}-${pkgver}
-    ./configure --prefix=/usr --libexecdir=/usr/lib --disable-static
+    cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBEXECDIR=lib
     make
 }
 
