--- a/ayatana-indicator-notifications/PKGBUILD
+++ b/ayatana-indicator-notifications/PKGBUILD
@@ -9,7 +9,7 @@ arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL3")
 depends=("glib2" "libayatana-indicator")
-makedepends=("cmake" "intltool" "libayatana-indicator" "glib2" "gdk-pixbuf2" "gtk3" "mate-common")
+makedepends=("libayatana-common" "cmake" "intltool" "libayatana-indicator" "glib2" "gdk-pixbuf2" "gtk3" "mate-common")
 source=("https://github.com/AyatanaIndicators/ayatana-indicator-notifications/archive/refs/tags/23.10.1.tar.gz")
 md5sums=("SKIP")
 options=("!emptydirs")
