--- a/ayatana-indicator-notifications/PKGBUILD
+++ b/ayatana-indicator-notifications/PKGBUILD
@@ -8,8 +8,8 @@ pkgdesc="Ayatana Indicator for viewing recent notifications"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL3")
-depends=("glib2" "libayatana-indicator")
-makedepends=("libayatana-common" "cmake" "intltool" "libayatana-indicator" "glib2" "gdk-pixbuf2" "gtk3" "mate-common")
+depends=("glib2" "libayatana-indicator" "libayatana-common")
+makedepends=("cmake-extras" "cmake" "intltool" "libayatana-indicator" "glib2" "gdk-pixbuf2" "gtk3" "mate-common")
 source=("https://github.com/AyatanaIndicators/ayatana-indicator-notifications/archive/refs/tags/23.10.1.tar.gz")
 md5sums=("SKIP")
 options=("!emptydirs")
