--- a/ayatana-indicator-bluetooth/PKGBUILD
+++ b/ayatana-indicator-bluetooth/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="Bluetooth Indicator"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators/ayatana-indicator-bluetooth"
 license=("GPL3")
-depends=("glib2" "accountsservice" "hicolor-icon-theme" "dconf" "lomiri-url-dispatcher")
+depends=("libayatana-common" "glib2" "accountsservice" "hicolor-icon-theme" "dconf" "lomiri-url-dispatcher")
 makedepends=("cmake" "gnome-common" "systemd" "intltool" "accountsservice" "vala" "glib2" "gio-qt" "git")
 source=("https://github.com/AyatanaIndicators/ayatana-indicator-bluetooth/archive/refs/tags/24.5.0.tar.gz"
         "fix-systemd.patch"
