--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgbase=qtmir-git
 pkgname=(qtmir-git)
 _pkgname=qtmir
 pkgver=r2907.0.7.2.r113.gea2f4774
-pkgrel=5
+pkgrel=6
 url='https://gitlab.com/ubports/development/core/qtmir'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
@@ -16,12 +16,13 @@ source=('git+https://gitlab.com/ubports/development/core/qtmir.git#commit=ea2f47
         'qtmir-debian-pkg.tar.gz::https://salsa.debian.org/ubports-team/qtmir/-/archive/debian/0.8.0_git20250407.ea2f477-4/qtmir-debian-0.8.0_git20250407.ea2f477-4.tar.gz'
         '3001_link_freetype_harfbuzz.patch'
         '3002_add-qt5mir2server.patch'
+        '3003_take_shell_rotation_into_account.patch'
 )
-sha256sums=('SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP'
-)
+sha256sums=('f18fc49b66f4d43dcefd56961e7680435bcc910dece31fe996f5e679c6af24c0'
+            '521853cca8a972dbe3f9108ebbdbd898d8d0d4a7bebbc3715765fc4e355f8b9a'
+            'f8ed4b35ec82c6b1f00186a5e2faf4399b50868241690a2fc20487e384f2c686'
+            'f1077654c0d2e9201c234b7782f28ecb6385f19369952b6249195f2ac9ca98a5'
+            '731633429641e75b8ed878568e346e674fdf33c55eb381db93149b55afbc8200')
 
 BUILDENV+=('!check')
 
@@ -42,7 +43,7 @@ prepare() {
   fi
   patch -Np1 -i "${srcdir}/3001_link_freetype_harfbuzz.patch"
   patch -Np1 -i "${srcdir}/3002_add-qt5mir2server.patch"
-
+  patch -Np1 -i "${srcdir}/3003_take_shell_rotation_into_account.patch"
 }
 
 pkgver() {
@@ -64,7 +65,7 @@ build() {
     -DCMAKE_CXX_STANDARD_REQUIRED=ON \
     -DCMAKE_CXX_EXTENSIONS=ON \
     ..
-  make
+  make -j8
 }
 
 # check() {
