--- a/lomiri/PKGBUILD
+++ b/lomiri/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=lomiri
 pkgname=(lomiri)
 _pkgname=lomiri
 pkgver=0.5.0
-pkgrel=12
+pkgrel=13
 url='https://gitlab.com/ubports/development/core/lomiri'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
@@ -18,11 +18,13 @@ source=(
   'debian-patches.tar.gz::https://salsa.debian.org/ubports-team/lomiri/-/archive/debian/0.5.0-6/lomiri-debian-0.5.0-6.tar.gz'
   'force-CXX_20.patch'
   '0001-take-shells-rotation-into-account.patch'
+  '0002-InputDispatchFilter-Wheel-take-Shell-s-rotation-into.patch'
 )
 sha256sums=('3e05440ce9bdd0d7f36e651ad00f059464198aba459aadabe51a1f427adc1779'
             '6bd0f3ad9a9db3a12cf3402a4c4487e932658c4ebe8754aceffe056151498cda'
             'c5dc8e491e059e88a9ce303c3266729c20c79955e80d56cdac759e9e79479265'
-            '76c303d709b57555e82bf2f834a3e0377e3207d5158d48ebb70a6dabedc63fdb')
+            '8bab2fbf7ba14af1ae90800cb2eeed15a63ee8a776f2eed64762045c53c74346'
+            '775928071cffcdf069abbedef1b4f40b6d5ff40f6296ab7a8a84846cff580519')
 
 BUILDENV+=('!check') # https://paste.ubuntu.com/p/2d33RJX4W8/
 
@@ -45,6 +47,7 @@ prepare() {
   fi
   # Apply local adjustments
   patch -Np1 -i "${srcdir}/0001-take-shells-rotation-into-account.patch"
+  patch -Np1 -i "${srcdir}/0002-InputDispatchFilter-Wheel-take-Shell-s-rotation-into.patch"
 }
 
 build() {
