--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgbase=qtmir-git
 pkgname=(qtmir-git)
 _pkgname=qtmir
 pkgver=r2907.0.7.2.r113.gea2f4774
-pkgrel=7
+pkgrel=8
 url='https://gitlab.com/ubports/development/core/qtmir'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
@@ -17,12 +17,14 @@ source=('git+https://gitlab.com/ubports/development/core/qtmir.git#commit=ea2f47
         '3001_link_freetype_harfbuzz.patch'
         '3002_add-qt5mir2server.patch'
         '3003_take_shell_rotation_into_account.patch'
+        '3004_add_touchpad_config.patch'
 )
 sha256sums=('f18fc49b66f4d43dcefd56961e7680435bcc910dece31fe996f5e679c6af24c0'
             '5fca70be7a579bfaa23331c72a8fe32d72e3dff00b94507360b83026c2120488'
             'f8ed4b35ec82c6b1f00186a5e2faf4399b50868241690a2fc20487e384f2c686'
             'f1077654c0d2e9201c234b7782f28ecb6385f19369952b6249195f2ac9ca98a5'
-            '731633429641e75b8ed878568e346e674fdf33c55eb381db93149b55afbc8200')
+            '731633429641e75b8ed878568e346e674fdf33c55eb381db93149b55afbc8200'
+            '4f7c0865289145d9d4b16f11b9dd0f972d386dda227c2d4d64ac1f4cd8f161cf')
 
 BUILDENV+=('!check')
 
@@ -44,6 +46,7 @@ prepare() {
   patch -Np1 -i "${srcdir}/3001_link_freetype_harfbuzz.patch"
   patch -Np1 -i "${srcdir}/3002_add-qt5mir2server.patch"
   patch -Np1 -i "${srcdir}/3003_take_shell_rotation_into_account.patch"
+  patch -Np1 -i "${srcdir}/3004_add_touchpad_config.patch"
 }
 
 pkgver() {
