--- a/lomiri/PKGBUILD
+++ b/lomiri/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=lomiri
 pkgname=(lomiri)
 _pkgname=lomiri
 pkgver=0.5.0
-pkgrel=13
+pkgrel=14
 url='https://gitlab.com/ubports/development/core/lomiri'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3)
@@ -16,12 +16,14 @@ checkdepends=(xorg-server-xvfb)
 source=(
   'git+https://gitlab.com/ubports/development/core/lomiri.git#tag=0.5.0'
   'debian-patches.tar.gz::https://salsa.debian.org/ubports-team/lomiri/-/archive/debian/0.5.0-6/lomiri-debian-0.5.0-6.tar.gz'
+  'home-lomiri.svg'
   'force-CXX_20.patch'
   '0001-take-shells-rotation-into-account.patch'
   '0002-InputDispatchFilter-Wheel-take-Shell-s-rotation-into.patch'
 )
 sha256sums=('3e05440ce9bdd0d7f36e651ad00f059464198aba459aadabe51a1f427adc1779'
             '6bd0f3ad9a9db3a12cf3402a4c4487e932658c4ebe8754aceffe056151498cda'
+            '56f6d11cb90f6866145ae5081db1558c2707ccb3e5957445cebe2d56d9742cb0'
             'c5dc8e491e059e88a9ce303c3266729c20c79955e80d56cdac759e9e79479265'
             '8bab2fbf7ba14af1ae90800cb2eeed15a63ee8a776f2eed64762045c53c74346'
             '775928071cffcdf069abbedef1b4f40b6d5ff40f6296ab7a8a84846cff580519')
@@ -76,6 +78,9 @@ package() {
   provides=(lomiri)
   cd ${_pkgname}/build
   make DESTDIR="${pkgdir}/" install
+
+  # Overwrite ubuntu logo with lomiri logo
+  install -Dm644 "${srcdir}/home-lomiri.svg" "${pkgdir}/usr/share/lomiri/Launcher/graphics/home.svg"
 
   # Move conf to the right directory
    #mv "${pkgdir}/usr/etc/dbus-1/system.d/com.canonical.Unity.conf"  "${pkgdir}/etc/dbus-1/system.d/"
