--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgbase=qtmir-git
 pkgname=(qtmir-git)
 _pkgname=qtmir
 pkgver=r2907.0.7.2.r113.gea2f4774
-pkgrel=8
+pkgrel=9
 url='https://gitlab.com/ubports/development/core/qtmir'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
@@ -61,14 +61,13 @@ build() {
   cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
     -DWITH_MIR2=ON \
     -DCMAKE_INSTALL_PREFIX:PATH=/usr \
-    -DNO_TESTS=1 \
     -DCMAKE_INSTALL_LIBDIR="lib/" \
     -DBUILD_TESTING=OFF \
     -DCMAKE_CXX_STANDARD=20 \
     -DCMAKE_CXX_STANDARD_REQUIRED=ON \
     -DCMAKE_CXX_EXTENSIONS=ON \
     ..
-  make -j8
+  make
 }
 
 # check() {
