--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgbase=qtmir-git
 pkgname=(qtmir-git)
 _pkgname=qtmir
 pkgver=r2907.0.7.2.r113.gea2f4774
-pkgrel=10
+pkgrel=11
 url='https://gitlab.com/ubports/development/core/qtmir'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
@@ -28,7 +28,6 @@ source=('git+https://gitlab.com/ubports/development/core/qtmir.git#commit=ea2f47
         '3001_link_freetype_harfbuzz.patch'
         '3002_add-qt5mir2server.patch'
         '3003_take_shell_rotation_into_account.patch'
-        '3004_add_touchpad_config.patch'
 )
 sha256sums=('f18fc49b66f4d43dcefd56961e7680435bcc910dece31fe996f5e679c6af24c0'
             '781fcd94bbf857395fdf94dc7ed310296287fdef4ba5a38311c3ad8e3c3739ec'
@@ -43,11 +42,9 @@ sha256sums=('f18fc49b66f4d43dcefd56961e7680435bcc910dece31fe996f5e679c6af24c0'
             '17c733aba90cb0ceec2f1df39184addc05821d9d9cd7d5e85931083ead947696'
             '11d9b920833b7765da28e495001b1f9a1e2dd9b70f0187ee83b76513208c5d18'
             '44be835086d86d2f12c15fbdc211c25055d14a395a20a8cc5c18576e07641e7b'
-            'f8ed4b35ec82c6b1f00186a5e2faf4399b50868241690a2fc20487e384f2c686'
-            'f1077654c0d2e9201c234b7782f28ecb6385f19369952b6249195f2ac9ca98a5'
-            '731633429641e75b8ed878568e346e674fdf33c55eb381db93149b55afbc8200'
-            '4f7c0865289145d9d4b16f11b9dd0f972d386dda227c2d4d64ac1f4cd8f161cf')
-
+            'b01298cd9611c39d2b9eb72f7e49d597674a80ac304df91ac69ca45e367cf9b5'
+            'c3af1d55c4cd0ff5c50cfe141e10e51dcd9ef369247c845c3874653cfd9efc95'
+            'b3f7c45f791c8575778409399f520b3e5e82cbc6b46d0dbb1d20d0efa719c91a')
 BUILDENV+=('!check')
 
 BUILD_DIR=build
@@ -69,11 +66,10 @@ prepare() {
   patch -Np1 -i "${srcdir}/0031_demos-drop-usage-of-deprecated-Descriptors.patch"
   patch -Np1 -i "${srcdir}/0032_mirsurface-add-mirror_mode_set_to.patch"
   # End debian patches
-
   patch -Np1 -i "${srcdir}/3001_link_freetype_harfbuzz.patch"
   patch -Np1 -i "${srcdir}/3002_add-qt5mir2server.patch"
   patch -Np1 -i "${srcdir}/3003_take_shell_rotation_into_account.patch"
-  patch -Np1 -i "${srcdir}/3004_add_touchpad_config.patch"
+  exit 1
 }
 
 pkgver() {
