--- a/biometryd/PKGBUILD
+++ b/biometryd/PKGBUILD
@@ -2,7 +2,7 @@
 pkgname=biometryd
 _pkgname=biometryd
 pkgver=0.3.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Biometric mediation/aggregation daemon + QML bindings for Lomiri (UBports)"
 arch=('x86_64' 'aarch64' 'armv7h')
 url="https://gitlab.com/ubports/development/core/biometryd/-/archive/0.3.2/biometryd-0.3.2.tar.gz"
@@ -31,10 +31,11 @@ makedepends=(
 optdepends=('apparmor: confinement support')
 source=("git+https://gitlab.com/ubports/development/core/biometryd.git#branch=main"
         "fix-boost.patch"
+        "0001-remove-boost.system.patch"
 )
 sha256sums=('SKIP'
-            'SKIP'
-)
+            '35db377a23061cbeabc7015bebd342758becaf596b2b06b08742ea855f2826e6'
+            'eacddc74a9309f5e87b3e948e41dcb3d8a6481de46e984c42257b76010c4ec4e')
 
 # pkgver() {
 #   cd ${_pkgname}
@@ -45,6 +46,7 @@ sha256sums=('SKIP'
 prepare() {
   cd "${srcdir}/${_pkgname}"
   patch -Np1 -i "${srcdir}/fix-boost.patch"
+  patch -Np1 -i "${srcdir}/0001-remove-boost.system.patch"
 }
 
 build() {
