--- a/libusermetrics/PKGBUILD
+++ b/libusermetrics/PKGBUILD
@@ -3,14 +3,14 @@
 pkgname=libusermetrics
 _pkgname=libusermetrics
 pkgver=1.3.3
-pkgrel=0
+pkgrel=1
 pkgdesc='Library for exporting anonymous metrics about users'
 url='https://gitlab.com/ubports/development/core/libusermetrics'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL3 LGPL GPL)
 conflicts=(libusermetrics)
 provides=(libusermetrics)
-depends=(qt5-base qt5-xmlpatterns gsettings-qt apparmor click qdjango-git libqtdbustest)
+depends=(qt5-base qt5-xmlpatterns gsettings-qt5 apparmor click qdjango-git libqtdbustest)
 makedepends=(git cmake cmake-extras doxygen intltool)
 source=('https://gitlab.com/ubports/development/core/libusermetrics/-/archive/1.3.3/libusermetrics-1.3.3.tar.gz')
 sha256sums=('SKIP')
@@ -30,7 +30,7 @@ prepare() {
 build() {
   cd ${_pkgname}-$pkgver
   cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_LIBEXECDIR="lib/" .
-  make -j$(nproc)
+  make
 }
 
 # Tests working, but takes too long
