--- a/libusermetrics/PKGBUILD
+++ b/libusermetrics/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=libusermetrics
 _pkgname=libusermetrics
 pkgver=1.3.3
-pkgrel=1
+pkgrel=2
 pkgdesc='Library for exporting anonymous metrics about users'
 url='https://gitlab.com/ubports/development/core/libusermetrics'
 arch=(x86_64 i686 armv7h aarch64)
@@ -12,8 +12,12 @@ conflicts=(libusermetrics)
 provides=(libusermetrics)
 depends=(qt5-base qt5-xmlpatterns gsettings-qt5 apparmor click qdjango-git libqtdbustest)
 makedepends=(git cmake cmake-extras doxygen intltool)
-source=('https://gitlab.com/ubports/development/core/libusermetrics/-/archive/1.3.3/libusermetrics-1.3.3.tar.gz')
-sha256sums=('SKIP')
+source=("git+https://gitlab.com/ubports/development/core/libusermetrics.git#tag=1.3.3"
+        "0001-Normalize-paths-if-pkg-config-returned-usr-include-q.patch"
+        "0002-Normalize-paths-if-pkg-config-returned-usr-include-q.patch")
+sha256sums=('922a3892697a320033a3fe862d49c49156a6f44a59efbc935c406a62e9b02fbe'
+            '785d56825204b04e277c18a2e12b9ccbe14a3529a5c2145a53aff2c13bb46ee5'
+            '56ff1c9c5769d8ed032fd559b4b1f5d7ade3442e05a5ee486ab8db40e5879e79')
 
 BUILDENV+=('!check') # Some tests are broken
 
@@ -23,12 +27,14 @@ BUILDENV+=('!check') # Some tests are broken
 # }
 
 prepare() {
-  cd ${_pkgname}-$pkgver
+  cd ${_pkgname}
+  patch -Np1 -i "${srcdir}/0001-Normalize-paths-if-pkg-config-returned-usr-include-q.patch"
+  patch -Np1 -i "${srcdir}/0002-Normalize-paths-if-pkg-config-returned-usr-include-q.patch"
   # git checkout bionic
 }
 
 build() {
-  cd ${_pkgname}-$pkgver
+  cd ${_pkgname}
   cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_LIBEXECDIR="lib/" .
   make
 }
@@ -40,7 +46,7 @@ build() {
 # }
 
 package() {
-  cd ${_pkgname}-$pkgver
+  cd ${_pkgname}
   make DESTDIR="${pkgdir}/" install
 }
 # vim:set ts=2 sw=2 et:
