--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         echo "$GITHUB_REPOSITORY" > ./repo
         echo -n "$IRONROBIN_SIGNING_KEY" > ./gpg_key
         file ./gpg_key
-        docker run -t -v $PWD:/build ogarcia/archlinux /bin/bash /build/entrypoint.sh
+        docker run -t -v $PWD:/build -v /srv/http/lomiri:/out ogarcia/archlinux /bin/bash /build/entrypoint.sh
         ls -l .
       env:
         IRONROBIN_SIGNING_KEY: ${{ secrets.IRONROBIN_SIGNING_KEY }}
