--- a/kcalendarcore5/PKGBUILD
+++ b/kcalendarcore5/PKGBUILD
@@ -9,7 +9,7 @@ arch=(x86_64 aarch64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(libical qt5-base)
-makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
+makedepends=(extra-cmake-modules doxygen qt5-tools)
 conflicts=("$_name<5.111")
 replaces=("$_name<5.111")
 groups=(kf5)
